[fix] header: description mobile breakpoint

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -893,6 +893,11 @@ h6 {
     display: block;
   }
 }
+@media (max-width: 480px) {
+  .header__description {
+    padding: 0 1rem;
+  }
+}
 
 .page {
   padding: 24px 1rem;
