--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -49,4 +49,10 @@
       display: block;
     }
   }
+
+  &__description {
+    @include breakpoint(max-width $mb) {
+      padding: 0 $horz-spacing-unit;
+    }
+  }
 }
